--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="transparent">@android:color/transparent</color>
     <color name="intervalText">@color/material_dynamic_primary10</color>
     <color name="detailLabel">@color/material_dynamic_primary30</color>
+
+    <integer-array name="progressColors">
+        <item>@color/material_dynamic_primary60</item>
+        <item>@color/material_dynamic_primary80</item>
+        <item>@color/material_dynamic_primary90</item>
+    </integer-array>
 </resources>
