--- a/app/src/main/res/drawable/selected_bg.xml
+++ b/app/src/main/res/drawable/selected_bg.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/example_2_black" />
+    <solid android:color="@android:color/holo_blue_bright" />
 </shape>
