--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -6,6 +6,6 @@
     android:layout_height="match_parent"
     android:layout_margin="5dp"
     android:gravity="center"
-    android:textColor="@color/black"
+    android:textColor="@android:color/holo_purple"
     android:textSize="16sp"
     tools:text="22" />
