--- a/app/src/main/res/layout/calendar_day_legend_text.xml
+++ b/app/src/main/res/layout/calendar_day_legend_text.xml
@@ -5,6 +5,6 @@
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:gravity="center"
-    android:textColor="@color/black"
+    android:textColor="@color/intervalText"
     android:textSize="14sp"
     tools:text="SUN" />
